[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/arena.png" type="Texture" id=1]
[ext_resource path="res://Levels/Arena.gd" type="Script" id=2]
[ext_resource path="res://Mechanisms/DropTargets.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mechanisms/FlipperLeft.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mechanisms/FlipperRight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mechanisms/Drain.tscn" type="PackedScene" id=7]
[ext_resource path="res://Mechanisms/Bumper.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 941.694, 86 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( -24.9452, 172.834, 24.9452, -172.834, 225.6, 207.382, 63.2538, 71.2719, -63.2538, -71.2719, -96.9051, 204.709, -45.4358, 62.3629, 45.4358, -62.3629, -52.3602, -58.9966, 118.921, 242.598, -118.921, -242.598, 415.587, 2.18396, 108.69, -264.597, -108.69, 264.597, 47.4206, 87.111, -58.7711, -157.427, 58.7711, 157.427, -98.1507, 385.108, -84.071, -30.1899, 84.071, 30.1899, 169.421, 348.243, -192.22, 210.341, 192.22, -210.341, 448.885, 383.919, -35.6359, 170.162, 35.6359, -170.162, 225.6, 207.382 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 198.741, 1134.66, 0, 0, 0, 0, 225.464, 207.147 )
}

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Drain" parent="." instance=ExtResource( 7 )]
position = Vector2( 163.934, 777.534 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drain"]
position = Vector2( 58.7992, 19.5997 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Drain"]
z_index = 1
color = Color( 0.815686, 0.176471, 0.745098, 0.729412 )
polygon = PoolVector2Array( -1000, -100, 1000, -100, 1000, 1000, -1000, 1000 )

[node name="Ore" type="Node2D" parent="."]

[node name="Walls" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( -156, 495, -510.063, 475.25, -518.751, -378.773, -369.981, -398.18, -363.212, 65.9898, -329.914, 64.8006, -327.668, -25.1678, -305.073, -57.2764, -136.984, -129.868, -99.2083, -102.878, -125.992, -76.5895, -152.12, 41.6744, -303.481, 268.716, -311.89, 320.852, -221.073, 448.668, -154, 478.5 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 231, -30, 194, -19, 142.582, 33.6988, 187.888, 113.928, 292.658, 86.5558, 282.275, 10.102 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 484.264, -69.1835, 396.484, 189.438, 412.53, 202.652, 506.917, 142.244, 532.402, 83.7242, 526.739, 20.4846, 503.142, -68.2396 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 123.24, 599.653, -36.7222, 527.156, -64.4408, 529.404, -47.9595, 551.878, 107.194, 624.194 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 310.127, 598.709, 400.784, 557.871, 427.753, 558.621, 416.516, 578.848, 322.397, 620.418 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 513.615, 502.891, 592.103, 455.323, 625.401, 373.268, 636.104, 262.672, 630.158, 127.102, 594.481, -37.0086, 531.453, -169.011, 456.533, -271.282, 410.665, -327.469, 942.919, -345.013, 926.27, 521.919, 526.697, 530.243 )

[node name="DropTargets" parent="." instance=ExtResource( 3 )]
position = Vector2( 243, 105 )
rotation = -0.264488

[node name="FlipperLeft" parent="." instance=ExtResource( 4 )]
position = Vector2( 119.407, 613.854 )

[node name="FlipperLeft2" parent="." instance=ExtResource( 4 )]
position = Vector2( -153.043, 492.765 )

[node name="FlipperRight" parent="." instance=ExtResource( 6 )]
position = Vector2( 311.132, 615.536 )

[node name="FlipperRight5" parent="." instance=ExtResource( 6 )]
position = Vector2( 484.356, -55.4992 )

[node name="FlipperRight4" parent="." instance=ExtResource( 6 )]
position = Vector2( 400.267, 193.406 )

[node name="FlipperRight3" parent="." instance=ExtResource( 6 )]
position = Vector2( 516.31, 516.31 )

[node name="FlipperRight2" parent="." instance=ExtResource( 6 )]
position = Vector2( 147.998, 45.4084 )

[node name="BossPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="BossEntryPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="BossSpawn" type="PathFollow2D" parent="BossEntryPath"]
position = Vector2( 198.741, 1134.66 )
rotation = -1.54199
lookahead = 320.0

[node name="BossTween" type="Tween" parent="BossEntryPath/BossSpawn"]

[node name="Bumper" parent="." instance=ExtResource( 8 )]
position = Vector2( -346.059, 53.5143 )
force = 1500.0

[connection signal="targets_complete" from="DropTargets" to="." method="_on_DropTargets_targets_complete"]
[connection signal="tween_completed" from="BossEntryPath/BossSpawn/BossTween" to="." method="_on_BossTween_tween_completed"]
